--- a/shooter_game/style.css
+++ b/shooter_game/style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(to right, red, green, blue);
+    background: black;
     width: 100vw;
     height: 100vh;
     overflow: hidden;
@@ -11,6 +11,43 @@ canvas{
     width: 100%;
     height: 100%;
 }
+
+button {
+    background-color: #236BB3; /* Blue */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    transition-duration: 0.4s;
+}
+
+button:hover {
+        background-color: black; 
+        color: white;
+        border: 2px solid #236BB3;
+}
+
+#home{
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+#infos{
+    margin-top: 20mm;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #236BB3;
+    font-size: 20px;
+    margin-bottom: 10mm;
+}
+
+#container{
+    width = 100%;
+    text-align : center;
+}
+
 
 #collisionCanvas{
     opacity: 0;
